# xn_smart_dialogue_platform

.agent/rules/: xingnian-rule.md
admin-web/: .gitignore  index.html  package.json  vite.config.ts
admin-web/doc/: Dockerfile  nginx.conf  部署说明.md
admin-web/src/: App.vue  main.ts
admin-web/src/api/: chat.ts  config.ts  device.ts  index.ts
admin-web/src/layouts/: MainLayout.vue
admin-web/src/router/: index.ts
admin-web/src/stores/: device.ts
admin-web/src/styles/: index.scss
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  deps.py  exceptions.py
backend/app/models/: __init__.py
backend/doc/: 部署说明.md
deploy/: docker-compose.yml
device/esp32/: README.md
device/xn_esp32_web_manager/: .gitignore  CMakeLists.txt  README.md  lv_conf.h
device/xn_esp32_web_manager/main/: CMakeLists.txt  app_state_machine.c  app_state_machine.h  main.c
device/xn_esp32_web_manager/main/managers/: blufi_manager.c  blufi_manager.h  button_manager.c  button_manager.h  display_manager.c  display_manager.h  mqtt_manager.c  mqtt_manager.h  ota_manager.c  ota_manager.h  wifi_manager.c  wifi_manager.h
device/xn_esp32_web_manager/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
device/xn_esp32_web_manager/main/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen3.c  ui_Screen3.h  ui_Screen4.h  ui_Screen5.c
doc/: 代码规范.md  功能需求.md  家庭智能对话平台框架.md  平台架构.drawio  技术栈.md  部署指南.md
lvgl/: SquareLine_Project.sll  SquareLine_Project.spj
lvgl/assets/: ui_font_pingfang16.c  ui_font_pingfang16.fcfg
lvgl/doc/: 3500常用汉字.xls  标点符号.txt
lvgl/ui/: CMakeLists.txt
smart-dialogue-platform/: README.md  docker-compose.yaml
smart-dialogue-platform/config/: config.example.yaml
smart-dialogue-platform/core/: __init__.py
smart-dialogue-platform/docs/: getting-started.md
smart-dialogue-platform/gateway/: server.py
(+101 files in other folders)
